[project]
name = "domain-gap-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "blenderproc>=2.8.0",
    "fastapi>=0.139.2",
    "gdown>=6.1.0",
    "numpy>=2.5.0",
    "pillow>=12.3.0",
    "rich>=15.0.0",
    "torch>=2.12.1",
    "transformers>=5.14.1",
    "ultralytics>=8.4.102",
    "uvicorn>=0.51.0",
    "wandb>=0.28.1",
]

[tool.uv.workspace]
members = [
    "torch",
]
